--- a/_config.yml
+++ b/_config.yml
@@ -6,34 +6,34 @@ favicon: images/favicon.ico
 version: 2
 
 # Personal info
-name: HanKyungEun
-title: Senior Network System Administrator
+name: Han KyungEun
+#title: Senior Network System Administrator
 email: az2282@naver.com
-website: www.github.com/hankyungeun/resume-theme
+website: https://hankyungeun.github.io/
 
 # Dark Mode (true/false/never)
 darkmode: false
 
 # Social links
-twitter_username: facespics
-github_username:  sproogen
+#twitter_username: facespics
+github_username:  hankyungeun
 # stackoverflow_username: "00000001"
 # dribbble_username: jekyll
 # facebook_username: jekyll
 # flickr_username: jekyll
-instagram_username: jameswgrant
-linkedin_username: jameswgrant
+#instagram_username: jameswgrant
+#linkedin_username: jameswgrant
 # xing_username: jekyll
 # pinterest_username: jekyll
-youtube_username: globalmtb
+#youtube_username: globalmtb
 # googleplus_username: +jekyll
 # orcid_username: 0000-0000-0000-0000
 
 # Additional icon links
 additional_links:
-- title: itsgoingto.be
+- title: velog.io
   icon: fas fa-globe
-  url: https://www.itsgoingto.be
+  url: https://velog.io/@hankyungeun/posts
 # - title: another link
 #   icon: font awesome brand icon name (eg. fab fa-twitter) (https://fontawesome.com/icons?d=gallery&m=free)
 #   url: Link url (eg. https://google.com)
@@ -109,8 +109,8 @@ content:
       - Knitting
       - [Becoming a ninja](https://www.youtube.com/watch?v=vtg4o__aRMg)
 
-      Look at this cool image  
-      ![Trees](/images/landscape-trees.jpg "Trees")
+#      Look at this cool image
+#      ![Trees](/images/landscape-trees.jpg "Trees")
 
 # Footer
 footer_show_references: true
